# chinook-data-analysis

./: Makefile  README.md  pyproject.toml
chinook_data_analysis/: __init__.py  dataset.py  features.py  plots.py
chinook_data_analysis/02 SQL/: sql_Hossein_Faghihi.pptx
chinook_data_analysis/02 SQL/mysqlqueries/: all queries.txt  q4.sql  q8.sql
chinook_data_analysis/03 jupyter file/: chinook_data.ipynb
chinook_data_analysis/04 powerpoint/: EDA_Hossein_Faghihi.pptx
chinook_data_analysis/05 powerbi/: powerbi_Hossein_Faghihi.pbix
chinook_data_analysis/SQL/mysqlqueries/: q1.sql  q2.1.sql  q3.sql  q6.sql  q7.sql
chinook_data_analysis/modeling/: predict.py  train.py
chinook_data_analysis/mysqlqueries/: all queries.txt  q2.1.sql  q2.2.sql  q5.sql  q6.sql  q9.sql
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: chinook_data.ipynb
