[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "chinook_data_analysis"
version = "0.0.1"
description = "in this oroject i will write some queries, analyse data in python and make dashboard with power bi"
authors = [
  { name = "HosseinFaghihi" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["chinook_data_analysis"]
force_sort_within_sections = true
